# moosql

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-04-08-diff-command-design.md
src/: config.rs  main.rs
src/bridge/: info_schema.rs  mod.rs  temp_tables.rs
src/cli/: apply.rs  commands.rs  diff.rs  diff_overlays.rs  mod.rs  overlay_branch.rs  overlay_mgmt.rs  snapshot.rs
src/overlay/: mod.rs  registry.rs  row_store.rs  schema_tracker.rs  sequence.rs  store.rs  transaction.rs  writer.rs
src/protocol/: mod.rs  prepared.rs  query_handler.rs
src/proxy/: auth.rs  handler.rs  mod.rs  schema_cache.rs  server.rs  session.rs
src/sql/: mod.rs  parser.rs  rewriter.rs  sp_rewriter.rs  table_extractor.rs
tests/: integration.rs
