[package]
name = "moosql"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlparser = { version = "0.61", features = ["visitor"] }
mysql_async = "0.34"
opensrv-mysql = { version = "0.7", default-features = false }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
